Position relative hopefully fixes alignment issues

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -132,8 +132,8 @@ tr:hover {
 }
 
 .bi {
+    position: relative;
     font-size: 2rem;
     font-family: none;
     color: $dark;
-    align-items: center;
 }
